--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ VITE_SITE_NAME = "宛安导航" # 名称
 VITE_SITE_ANTHOR = "w45sen" # 作者
 VITE_SITE_KEYWORDS = "宛安小站导航页" # 关键词
 VITE_SITE_DES = "这是一个导航页" # 站点简介
-VITE_SITE_URL = "www.w45sen.top" # 站点地址
+VITE_SITE_URL = "w45sen.top" # 站点地址
 VITE_SITE_LOGO = "/images/icon/favicon.ico" # 站点主图标
 VITE_SITE_MAIN_LOGO = "/images/icon/logo.png" # 主页图标
 VITE_SITE_APPLE_LOGO = "/images/logo/apple-touch-icon.png" # Apple 端图标
